# faceapp

./: .env.example  .gitignore  codebase_analysis.md  docker-compose.yml  ingest.py  init.sh  local_multiprocess_worker.py  local_worker.py  main.py  search.py  utils.py
faceapp/: Dockerfile  README.md  pyproject.toml
faceapp/docs/: Makefile  conf.py  core.rst  services.rst
faceapp/docs/_build/html/: .buildinfo  core.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  services.html
faceapp/docs/_build/html/.doctrees/: core.doctree  environment.pickle  index.doctree  services.doctree
faceapp/docs/_build/html/_sources/: index.rst.txt
faceapp/src/faceapp/: __init__.py  interface.py  manager.py
faceapp/src/faceapp/_base/: __init__.py  base.py  extractor.py  fetcher.py  indexer.py  pipeline.py  search.py
faceapp/src/faceapp/utils/: __init__.py  builders.py  cleanup.py  config_store.py  extractor.py  fetcher.py  manager.py  metadata.py  misc.py  pipelines.py  search.py  storage.py  vector_index.py
faceapp/src/faceapp/utils/processes/: __init__.py  cleanup.py  extractor.py  fetcher.py  metadata.py  process_outputs.py
faceapp/src/faceapp/utils/processes/vector_index/: __init__.py  azure_aisearch.py  (+4 more)
faceapp/src/faceapp/utils/vector_index/: azure_aisearch.py
faceapp/src/faceapp_services/: __init__.py  manager.py
faceapp/src/faceapp_services/api/: __init__.py  main.py
faceapp/src/faceapp_services/vector_db/: __init__.py  qdrant.py
faceapp/src/faceapp_services/workers/: __init__.py  contracts.py  dispatcher.py  extraction.py  local_runner.py  multiprocess_runner.py  queue.py  result_store.py  runtime.py  strategies.py
(+13 files in other folders)
