[project]
name = "faceapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deepface>=0.0.95",
    "tf-keras>=2.20.1",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "faceapp",
]
